--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <HTML lang="en">
-<HEAD>
-    <META charset="UTF-8">
-    <TITLE>HBNB</TITLE>
-</HEAD>
-<BODY>
-    <H1>States</H1>
-    <UL>
-        {% for state in states %}
+    <HEAD>
+        <TITLE>HBNB</TITLE>
+    </HEAD>
+    <BODY>
+        <H1>States</H1>
+        <UL>
+            {% for state in states %}
             <LI>{{ state.id }}: <B>{{ state.name }}</B>
                 <UL>
-                    {% for city in state.cities|sort(attribute='name') %}
+                        {% for city in state.cities %}
                         <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
-                    {% endfor %}
+                        {% endfor %}
                 </UL>
             </LI>
-        {% endfor %}
-    </UL>
-</BODY>
+            {% endfor %}
+        </UL>
+    </BODY>
 </HTML>
