--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -1,27 +1,28 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <HTML lang="en">
-<HEAD>
-    <META charset="UTF-8">
-    <TITLE>HBNB</TITLE>
-</HEAD>
-<BODY>
-    {% if not_found %}
-        <H1>Not found!</H1>
-    {% elif state %}
-        <H1>State: {{ state.name }}</H1>
-        <H3>Cities:</H3>
-        <UL>
-            {% for city in cities %}
-                <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
-            {% endfor %}
-        </UL>
-    {% else %}
+    <HEAD>
+        <TITLE>HBNB</TITLE>
+    </HEAD>
+    <BODY>
+        {% if id == None %}
         <H1>States</H1>
         <UL>
-            {% for state in states %}
+                {% for state in states %}
                 <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
-            {% endfor %}
+                {% endfor %}
         </UL>
-    {% endif %}
-</BODY>
+        {% else %}
+            {% if len == 0 %}
+        <H1>Not found!</H1>
+            {% else %}
+        <H1>State: {{ states[0].name }}</H1>
+        <H3>Cities:</H3>
+        <UL>
+                {% for city in states[0].cities %}
+                <LI>{{ city.id }}: <B>{{ city.name }}</B>
+                {% endfor %}
+        </UL>
+            {% endif %}
+        {% endif %}
+    </BODY>
 </HTML>
