--- a/web_flask/static/styles/3-footer.css
+++ b/web_flask/static/styles/3-footer.css
@@ -1,10 +1,15 @@
 footer {
-    margin: auto auto 0 auto;
-    background-color: #FFFFFF;
-    height: 60px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-top: 1px solid #CCCCCC;
+  position: fixed;
+  bottom: 0;
+  height:60px;
+  width:100%;
+  border-top: 1px solid #CCCCCC;
+  background-color: white;
+}
+
+span.footer_placeholder {
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%,-50%);
 }
