--- a/web_flask/static/styles/3-header.css
+++ b/web_flask/static/styles/3-header.css
@@ -1,9 +1,9 @@
 header {
-    background-color: #FFFFFF;
-    background-image: url("../images/logo.png");
-    background-position: left-top;
-    background-repeat: no-repeat;
-    height: 70px;
-    width: 100%;
-    border-bottom: 1px solid #CCCCCC;
+  height: 70px;
+  width: 100%;
+  border-bottom: 1px solid #CCCCCC;
+  background: url("../images/logo.png");
+  background-repeat: no-repeat;
+  background-position: 20px;
+  background-color: white;
 }
