--- a/web_flask/static/styles/6-filters.css
+++ b/web_flask/static/styles/6-filters.css
@@ -1,104 +1,98 @@
 .filters {
-    background-color: #FFFFFF;
-    height: 70px;
-    width: 100%;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+  height: 70px;
+  width: 100%;
+  border: 1px solid #DDDDDD;
+  border-radius: 4px;
+  position: relative;
 }
 
-button {
-    font-size: 18px;
-    background-color: #FF5A5F;
-    color: #FFFFFF;
-    height: 48px;
-    width: 20%;
-    border-radius: 4px;
-    margin-right: 30px;
-    text-align: center;
-    opacity: 1.0;
-    filter: alpha(opacity=100);
-}
-
-button:hover {
-    opacity: 0.9;
-    filter: alpha(opacity=100);
-}
-
-.locations {
-    height: 100%;
-    width: 25%;
-    border-right: 1px solid #DDDDDD;
-    margin-right: 0;
-    
+.locations, .amenities {
+  height: 100%;
+  width: 25%;
+  position: relative;
+  display: inline-block;
 }
 
 .amenities {
-    height: 100%;
-    width: 25%;
-    margin-right: auto;
+  margin-left: -4px;
 }
 
-.title {
-    margin-bottom: 0;
-    margin-left: 15%;
-    text-align: left;
-    font-weight: 600;
+.locations {
+  border-right: #DDDDDD solid 1px;
 }
 
-.subtitle {
-    margin-top: 0;
-    margin-left: 15%;
-    text-align: left;
-    font-size: 14px;
-    font-weight: 400;
+.locations > h3, .amenities > h3 {
+  font-weight: 600;
+  padding-left: 20%;
+  margin-bottom: 0.2em;
 }
 
-.popover {
-    display: none;
-    background-color: #FAFAFA;
-    width: 90%;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
-    list-style-type: none;
-    padding-left: 10%;
-    max-height: 300px;
-    overflow-y: auto;
+.locations > h4, .amenities > h4 {
+  font-weight: 400;
+  font-size: 14px;
+  padding-left: 20%;
+  margin-top: 0;
 }
 
-.locations li {
-    margin-top: 5%;
-    margin-bottom: 5%;
-}
-
-.sublist {
-    list-style-type: none;
-    margin-bottom: 10%
-}
-
-.amenities ul {
-    padding-top: 5%;
-    padding-bottom: 5%;
-}
-.amenities li {
-    margin-top: 5%;
-    margin-bottom: 5%;
-}
-
-.locations:hover .popover {
-    display: block;
-    position: relative;
-    z-index: 100;
-}
-
-.amenities:hover .popover {
-    display: block;
-    position: relative;
-    z-index: 100;
+.popover ul {
+  list-style-type: none;
 }
 
 .popover h2 {
-    font-size: 16px;
+  margin-bottom: 1px;
+}
+
+.city {
+  margin-left: -20px;
+  margin-top: -5px;
+}
+
+.popover {
+  display: none;
+  position: absolute;
+  width: 100%;
+  max-height: 300px;
+  line-height: 200%;
+  z-index: 1;
+  background-color: #FAFAFA;
+  border: #DDDDDD solid 1px;
+  border-radius: 4px;
+  margin-top: -4px;
+  margin-left: -1px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  word-wrap: break-word;
+  overflow-y: hidden;
+}
+
+.popover:hover {
+    overflow-y: auto;
+}
+
+.locations:hover .popover,
+.amenities:hover .popover {
+  display: inline-block;
+}
+
+.amenities:hover .popover {
+  margin-left: -1px;
+}
+
+button.button_search {
+  font-size: 18px;
+  background-color: #FF5A5F;
+  color: #FFFFFF;
+  height: 48px;
+  width: 20%;
+  border: none;
+  border-radius: 4px;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  float: right;
+  margin-right: 30px;
+}
+
+button.button_search:hover {
+  opacity: 0.9;
 }
