--- a/web_flask/static/styles/8-places.css
+++ b/web_flask/static/styles/8-places.css
@@ -1,85 +1,101 @@
 .places {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-evenly;
+  width: 100%;
+  margin: auto;
+  margin-bottom: 100px;
 }
-
 .places h1 {
-    height: 30px;
-    width: 100%;
-    font-size: 30px;
-    padding-left: 3%;
+  font-size: 30px;
+  margin-left: 25px;
 }
 
-article {
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    height: 390px;
-    width: 390px;
-    padding: 20px;
-    margin: 20px;
-    border: 1px solid #FF5A5F;
-    border-radius: 4px;
-    
+.place_items {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-.title_of_place {
-    display: flex;
-    height: 30px;
-    text-align: left;
-    font-size: 20px;
-    margin-top: auto;
+.place_items > article {
+  width: 390px;
+  height: 100%;
+  padding: 20px;
+  margin: 20px;
+  border: #FF5A5F solid 1px;
+  border-radius: 4px;
+}
+
+.place_items h2 {
+  font-size: 30px;
+  margin: auto;
+  padding: 0;
+  text-align: center;
+}
+
+.title {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+.title h2 {
+  position: relative;
+  margin-left: 0;
+  padding: 0;
+  text-align: left;
 }
 
 .price_by_night {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    color: #FF5A5F;
-    min-width: 60px;
-    width: 60px;
-    height: 60px;
-    font-size: 20px;
-    border: 4px solid #FF5A5F;
-    border-radius: 50%;
-    margin-left: auto;
-    margin-top: auto;
+  color: #FF5A5F;
+  border: #FF5A5F 4px solid;
+  border-radius: 50%;
+  min-width: 60px;
+  height: 60px;
+  font-size: 30px;
+  margin-left: 0;
+  margin-top: 0;
+  padding: 2%;
 }
 
-.tripleDigits {
-    font-size: 25px;
+.price_by_night p {
+    margin-top: 13px;
+    text-align: center;
 }
 
 .information {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    height: 80px;
-    width: 100%;
-    border-top: 1px solid #DDDDDD;
-    border-bottom: 1px solid #DDDDDD;
-    margin-top: 10px
+  height: 80px;
+  border-top: #DDDDDD 1px solid;
+  border-bottom: #DDDDDD 1px solid;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
-.max_guest,
-.number_rooms,
+.information p {
+  margin-top: 50px;
+  text-align: center;
+}
+
+.max_guest, .number_rooms, .number_bathrooms {
+  width: 100px;
+  background-position: center;
+  margin-top: 6px;
+}
+
+.max_guest {
+  background: url("../images/icon_group.png");
+  background-repeat: no-repeat;
+  background-position-x: center;
+}
+
+.number_rooms {
+  background: url("../images/icon_bed.png");
+  background-repeat: no-repeat;
+  background-position-x: center;
+}
+
 .number_bathrooms {
-    background-position: top;
-    background-repeat: no-repeat;
-    background-size: contain;   
-}
-
-.max_guest p,
-.number_rooms p,
-.number_bathrooms p {
-    margin-top: 50px;
-}
-
-.user {
-    margin-right: auto;
-}
-
-.ownerBold {
-    font-weight: bold;
+  background: url("../images/icon_bath.png");
+  background-repeat: no-repeat;
+  background-position-x: center;
 }
